--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # API Configuration
 VITE_API_URL=http://localhost:8080/api
 
+# OIDC Authentication
 VITE_CLIENT_ID=caregiver-app
 VITE_CLIENT_SECRET=caregiver-secret
 VITE_DEFAULT_CAREGIVER_ID=c2d1bb61-8d67-4db5-9e59-4c2c16f7d4f2
